--- a/code/TDC/mobile/TDC/Views/List/ListView.xaml
+++ b/code/TDC/mobile/TDC/Views/List/ListView.xaml
@@ -15,7 +15,7 @@
                 </Grid.RowDefinitions>
 
                 <Entry x:Name="TitleEntry"
-                       Placeholder="Enter list title..."                       
+                       Placeholder="Enter list title..."
                        FontSize="Large"
                        HorizontalOptions="FillAndExpand"
                        HorizontalTextAlignment="Center"
@@ -63,76 +63,94 @@
                     SemanticProperties.Hint="Finish List"
                     Clicked="OnFinishListClicked"
                     IsEnabled="False"
+                    BackgroundColor="#068186"
                     HorizontalOptions="Fill">
             </Button>
 
             <Button x:Name="DeleteListBtn"
-                        Text="Delete List" 
+                        Text="Delete List"
+                        TextColor="#EEEEEE"
                         SemanticProperties.Hint="Delete List"
                         Clicked="OnDeleteListClicked"
-                        BackgroundColor="#EEEEEE"
+                        BackgroundColor="#FF4433"
                         HorizontalOptions="Fill">
             </Button>
 
             <!-- Member Dashboard -->
-            <Frame BackgroundColor="#F0F0F0"
+            <Border BackgroundColor="#F0F0F0"
                    Padding="10"
-                   CornerRadius="12"
-                   HasShadow="True"
-                   BorderColor="#CCCCCC"
                    Margin="0,10"
                    HorizontalOptions="FillAndExpand">
 
-                <VerticalStackLayout Spacing="5">
-                    <Label Text="Shared with:" 
-                           FontSize="Medium"
-                           TextColor="Black"
-                           FontAttributes="Bold"
-                           HorizontalOptions="Start" />
+                <Grid ColumnDefinitions="*,*">
+                    <VerticalStackLayout Grid.Column="0">
+                        <Label Text="List Members:"
+                               FontSize="20"
+                               TextColor="Black"
+                               FontAttributes="Bold"
+                               HorizontalOptions="Start" />
+                        <!-- Member list goes here -->
+                        <CollectionView x:Name="MemberListView"
+                                        ItemsSource="{Binding Members}"
+                                        SelectionMode="Multiple"
+                                        HeightRequest="100">
+                            <CollectionView.ItemTemplate>
+                                <DataTemplate>
+                                    <HorizontalStackLayout Spacing="10">
+                                        <Label Text="{Binding Username}"
+                                               Margin="10, 5, 0, 5"
+                                               VerticalOptions="Center"
+                                               TextColor="Black"
+                                               FontSize="14"/>
+                                        <Label Text="{Binding Points}"
+                                               VerticalOptions="Center"
+                                               TextColor="Gray"
+                                               FontSize="14"/>
+                                    </HorizontalStackLayout>
+                                </DataTemplate>
+                            </CollectionView.ItemTemplate>
+                        </CollectionView>
+                        <Button x:Name="RemoveMemberBtn"
+                                Text="Remove"
+                                Margin="0,10,5,0"
+                                Clicked="OnRemoveMemberClicked"
+                                BackgroundColor="#FF4433"
+                                TextColor="White"
+                                CornerRadius="8"/>
+                    </VerticalStackLayout>
+                    <VerticalStackLayout Grid.Column="1">
+                        <Label Text="Friends:"
+                               FontSize="20"
+                               TextColor="Black"
+                               FontAttributes="Bold"/>
 
-                    <!-- Member list goes here -->
-                    <CollectionView x:Name="MemberListView"
-                                    ItemsSource="{Binding Members}"
-                                    HorizontalOptions="FillAndExpand"
-                                    HeightRequest="100">
-                        <CollectionView.ItemTemplate>
-                            <DataTemplate>
-                                <HorizontalStackLayout Spacing="10">
-                                    <Image Source="user_icon.png"
-                                           WidthRequest="24"
-                                           HeightRequest="24"
-                                           VerticalOptions="Center"/>
-                                    <Label Text="{Binding Username}" 
-                                           VerticalOptions="Center"
-                                           TextColor="Black"
-                                           FontSize="14" />
-                                    <Label Text="{Binding Points}"
-                                           VerticalOptions="Center"
-                                           TextColor="Gray"
-                                           FontSize="14"
-                                           Margin="10,0,0,0"/>
-                                </HorizontalStackLayout>
-                            </DataTemplate>
-                        </CollectionView.ItemTemplate>
-                    </CollectionView>
-                    <Label Text="Add friend to list:"
-                           FontSize="Medium"
-                           TextColor="Black"
-                           FontAttributes="Bold"
-                           Margin="0,10,0,0" />
+                        <CollectionView x:Name="FriendListView"
+                                        ItemsSource="{Binding FriendUsernames}"
+                                        SelectionMode="Multiple"
+                                        HeightRequest="100">
 
-                    <HorizontalStackLayout Spacing="10" VerticalOptions="Center">
-                        <Picker x:Name="FriendPicker"
-                                Title="Select friend"
-                                ItemsSource="{Binding FriendUsernames}" />
+                            <CollectionView.ItemTemplate>
+                                <DataTemplate>
+                                    <HorizontalStackLayout Spacing="10" >
+                                        <Label Text="{Binding .}"
+                                               Margin="10, 5, 0, 5"
+                                               VerticalOptions="Center"
+                                               TextColor="Black"
+                                               FontSize="14"/>
+                                    </HorizontalStackLayout>
+                                </DataTemplate>
+                            </CollectionView.ItemTemplate>
+                        </CollectionView>
+
                         <Button Text="Add"
+                                Margin="0,10,0,0"
                                 Clicked="OnAddFriendClicked"
                                 BackgroundColor="#4CAF50"
                                 TextColor="White"
                                 CornerRadius="8"/>
-                    </HorizontalStackLayout>
-                </VerticalStackLayout>
-            </Frame>
+                    </VerticalStackLayout>
+                </Grid>
+            </Border>
 
             <!-- Points -->
             <Label Text="Completed Points: "
