changed description changed listener (bug empty descr fixed)

--- a/code/TDC/mobile/TDC/Views/ListItem/ListItemView.xaml
+++ b/code/TDC/mobile/TDC/Views/ListItem/ListItemView.xaml
@@ -19,7 +19,7 @@
                    IsReadOnly="False" 
                    Grid.Column="1" 
                    Completed="EnterPressed"
-                   Unfocused="DescriptionChanged"
+                   TextChanged="DescriptionChanged"
                    />
 
             <!--effort picker-->
